Implement reallocate Application Assessment endpoint